# Bot

./: .gitignore  pyproject.toml  setup.cfg
bot/: __main__.py  config.py
bot/api/: client.py  details.py  schemas.py
