[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Vladislav Gorokhov <gvsnbala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^4.0.1"
mypy = "^0.971"
pydantic = "^1.9.1"
httpx = "^0.23.0"
python-telegram-bot = "^13.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
